# Crabtree

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  broken.json  check.bat  dev.bat  index.html  package-lock.json  package.json  sample-test-data.json  test-data.json  test.json  vite.config.js
benchmark/: latest.json  latest.md
scripts/: benchmark.js  generate-comparison-files.js
src/: command-palette.js  csv-viewer.js  data-analyzer.js  diagnostics-core.js  error-overlay.js  extension-host.js  fuzzy-index.js  investigation-workspace.js  json-path-locator.js  json-viewer.js  lang-log.js  main.js  outline-core.js  query-core.js  query-worker.js  styles.css  task-runner.js  worker-bridge.js  worktree-trust.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: csv-viewer.test.js  diagnostics-core.test.js  fuzzy-index.test.js  json-path-locator.test.js  query-core.test.js  security.test.js  worktree-trust.test.js
